--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
             <img id="play4" class="player" src="img/Peao-Grow-Verde.png" alt="">
         </div>
 
+        <div class="vez">
+            <img id="popup" src="" width="150" height="150">
+        </div>
+
+
         <div id="div_dado">
             <img id="face" src="img/face1.png" onclick="sorteioDado()">
             <h3 id="ultimoSorteado">Face anterior: </h3>
