--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Daniel Rodrigues - Tabuleiro</title>
+    <title>Jogo tabuleiro - Daniel Rodrigues</title>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/time.css">
@@ -13,11 +13,10 @@
     <script src="JavaScript/conf.js"></script>
     <script src="JavaScript/dado.js"></script>
     <script src="JavaScript/sorte.js"></script>
-    <script src="JavaScript/pergunta.js"></script>
     <script src="JavaScript/time.js"></script>
-    <script src="JavaScript/ordem.js"></script>
 </head>
 <body>
+    <!-- PARA FINS DE EXEMPLO, OPTEI POR NÃO UTILIZAR 'FOR' E 'ALT' -->
     <div class="container" id="container">
 
         <div id="jogadores">
@@ -27,32 +26,24 @@
             <img id="play4" class="player" src="img/Peao-Grow-Verde.png" alt="">
         </div>
 
-        <div class="vez">
-            <img id="popup" src="" width="120" height="120">
-        </div>
-
-
         <div id="div_dado">
             <img id="face" src="img/face1.png" onclick="sorteioDado()">
             <h3 id="ultimoSorteado">Face anterior: </h3>
-            <h3 id="cor" ></h3>
+            <h3 id="avisoDualsSorteio"></h3>
         </div> 
 
         <div id="div_sorte">
-            <img id="sorte" src="img/sorte.png" alt="" onclick="SorteioSorte()">
-            <h4 id="sorte_sorteada">Sorte ou Azar</h4>
+            <img id="sorte" src="img/sorte.png" alt="" onclick="sorteioSorte()">
+            <h4 id="sorte_sorteada">Tire a sorte quanto estiver nas casas azuis</h4>
         </div> 
 
         <div id="div_pergunta">
-            <img id="sorte" src="img/pergunta.png" alt="" onclick="sorteioPergunta()">
+            <img id="pergunta" src="img/pergunta.png" alt="" onclick="sorteioPergunta()">
             <h4 id="pergunta">Você deverá responder uma pergunta</h4>
         </div> 
 
-
-
-
         <div id="imagem">
-            <img id="imgjogo" src="img/img_table.png" alt="">
+            <img id="imgjogo" src="img/tabuleiroof.png" alt="">
         </div>
     </div>
 </body>
