--- a/JavaScript/sorteiopergunta.html
+++ b/JavaScript/sorteiopergunta.html
@@ -26,18 +26,12 @@
                         <input type="radio" id="b" name="answer" value="a">
                         <label for="a">B) Júpiter</label>
                     </p>
-                    <p>
-                        <input type="radio" id="c" name="answer" value="a">
-                        <label for="a">C) Terra</label>
-                    </p>
+
                     <p>
                         <input type="radio" id="d" name="answer" value="a">
-                        <label for="a">D) Marte</label>
+                        <label for="a">C) Marte</label>
                     </p>    
-                    <p>
-                        <input type="radio" id="e" name="answer" value="a">
-                        <label for="a">E) Vênus</label>
-                    </p>    
+
 
                     <input type="submit" value="validar" id="validar"/>
 
@@ -58,7 +52,15 @@
     p{padding: 10px;}
     .row{ margin: 0 auto;}
 
-    body{background-color: #330077; color: #ffffff; font-family: Arial, Helvetica, sans-serif; font-size: 16px; line-height: 1.5; text-align: center;}
+    body{background-color: #0b236d;; background-size: cover; background-repeat: no-repeat;color: #ffffff; font-family: Arial, Helvetica, sans-serif; font-size: 16px; line-height: 1.5; text-align: center;}
+
+    .container { 
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        
+    }
 
     .resultado_certo{
         background-color: #00FF00;
