--- a/JavaScript/sorteiopergunta.html
+++ b/JavaScript/sorteiopergunta.html
@@ -59,6 +59,11 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+
+        border: 1px solid #fff;
+        border-radius: 10px;
+        padding: 10px;
+        text-align: justify;
         
     }
 
