--- a/JavaScript/sorteiosorte.html
+++ b/JavaScript/sorteiosorte.html
@@ -50,6 +50,9 @@
         "Os primeiros planetas localizados fora do Sistema Solar foram descobertos em 1992.",
         "A Terra é o terceiro planeta mais próximo do Sol.",
         "A Lua é o único satélite natural do Sistema Solar.",
+        "Danos causados por cometas são raros, mas podem ser devastadores.",
+        "Satélites artificiais são usados para comunicação, navegação e observação.",
+        
 
     ];
     var curiosidade = curio[Math.floor(Math.random() * curio.length)];
