--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div> 
 
         <div id="imagem">
-            <img id="imgjogo" src="img/tab2ju.png" alt="">
+            <img id="imgjogo" src="img/tabuleiroof.png" alt="">
         </div>
     </div>
 </body>
