--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
         <div id="div_sorte">
             <img id="sorte" src="img/sorte.png" alt="" onclick="sorteioSorte()">            
-            <h4 id="sorte_sorteada">Sorte</h4>
+            <h4 id="sorte_sorteada">Sorte ou azar</h4>
         </div> 
 
         <div id="div_pergunta">
             <img id="pergunta" src="img/pergunta.png" alt="" onclick="sorteioPergunta()">
-            <h4 id="pergunta">Pergunta</h4>
+            <h4 id="pergunta">Perguntas</h4>
         </div> 
 
         <div id="imagem">
