--- a/JavaScript/sorteiosorte.html
+++ b/JavaScript/sorteiosorte.html
@@ -52,7 +52,18 @@
         "A Lua é o único satélite natural do Sistema Solar.",
         "Danos causados por cometas são raros, mas podem ser devastadores.",
         "Satélites artificiais são usados para comunicação, navegação e observação.",
+        "Os anéis de Saturno são compostos por bilhões de fragmentos de gelo e rocha com dimensões que variam do tamanho de grãos de areia a pequena montanhas",
+        "A primeira pessoa a realmente ver e identificar os anéis de Saturno foi o astrônomo holandês Christiaan Huygens, em 1655, que acreditava que o planeta contava com um único anel sólido e plano ao seu redor.",
+        "O impacto de um cometa, de grandes proporções, poderia provocar danos catastróficos à Terra.",
+        "350 a.C - o matemático grego Eudoxo de Cnidos, elabora o primeiro mapa astronômico do mundo.",
+        "O maior meteorito encontrado em nosso planeta foi o Hoba. Com peso de 59 toneladas, ele foi achado em 1920, em Hoba West, na Namíbia (Sul da África). Segundo estudos, ele deve ter caído em nosso planeta a cerca de 80 mil anos",
+        "O cometa mais conhecido no mundo da Astronoia é o Halley, ele se aproxima do nosso planeta a cada 76 anos (última vez foi em 1986).",
+        "Se olharmos para o céu numa noite escura, vemos uma faixa de luz cortando o céu de horizonte a horizante. Esta faixa e todas as estrelas que vemos no céu fazem parte da galáxia em que vivemos, a Via Láctea.",
+        "Felizmente são poucos os meteoritos que atingem o solo de nosso planeta causando estragos. Recentemente, no ano de 2013, um meteorito atingiu vários prédios da Rússia causando diversos danos matériais.",
+        "Os meteoritos de pequeno porte (maioria) dificilmente atingem a superfície terrestre, pois se desintegram na atmosfera. Costumam deixar um rastro de fogo e fumaça no céu e são, muitas vezes, chamados popurlamente de estrelas cadentes.",
+        "O planeta Terra e todo sistema solar estão localizados dentro da galáxia chamada de Via Láctea. Nossa galáxia tem o formato de espiral achatada, possuindo cerca de 200 bilhões de estrelas. A Via Láctea possui um diâmetro aproximado de cem mil anos-luz.",
         
+
 
     ];
     var curiosidade = curio[Math.floor(Math.random() * curio.length)];
@@ -68,7 +79,7 @@
         document.getElementById("casas").innerHTML = "Avance " + casa + " casas.";
     } else {
         var casa = csorte[Math.floor(Math.random() * csorte.length)];
-        document.getElementById("casas").innerHTML = "Recue " + casa + " casas.";
+        document.getElementById("casas").innerHTML = "Retroceda " + casa + " casas.";
     }
 </script>
 </html>
