--- a/JavaScript/sorteiosorte.html
+++ b/JavaScript/sorteiosorte.html
@@ -62,7 +62,28 @@
         "Felizmente são poucos os meteoritos que atingem o solo de nosso planeta causando estragos. Recentemente, no ano de 2013, um meteorito atingiu vários prédios da Rússia causando diversos danos matériais.",
         "Os meteoritos de pequeno porte (maioria) dificilmente atingem a superfície terrestre, pois se desintegram na atmosfera. Costumam deixar um rastro de fogo e fumaça no céu e são, muitas vezes, chamados popurlamente de estrelas cadentes.",
         "O planeta Terra e todo sistema solar estão localizados dentro da galáxia chamada de Via Láctea. Nossa galáxia tem o formato de espiral achatada, possuindo cerca de 200 bilhões de estrelas. A Via Láctea possui um diâmetro aproximado de cem mil anos-luz.",
-        
+        "Somente três galáxias podem ser vistas a olho nu do nosso planeta. São elas: Andrômeda. Pequena, Nuvem e Grande Nuvem.",
+        "Eratóstenes(276-194 a.C) - estudioso de astronomia da Grécia Antiga, foi o primeiro a fazer cálculos sobre a circunferência do planeta Terra. Foi também, filósofo, geógrafo e matemático.",
+        "As maiores luas do sistema solar são: Ganimedes(satélite natural de Júpiter). Titã (satélite natural de Saturno). Calisto (satélite natural de Júpiter) e IO (satélite natural de Júpiter)",
+        "A estrela mais próxima do sistema solar é Centaure, distante cerca 4,22 anos-luz. Ela esta localizada no sistema Alpha Centauri",
+        "Os primeiros planetas localizados fora do sistema solar foram descobertos em 1992",
+        "Muitos cientistas afirmam que os cometas se originaram de resíduos deixados pela condensação da nebulosa que formou o sistema solar",
+        "Maior meteorito que caiu no Brasil(com registro) foi o “pedra de bendegó''. Ele atingiu o sertão baiano no ano de 1784.",
+        "Em janeiro de 2005, cientistas descobriram Eris, que fica localizado além da órbita de plutão e tem aproximadamente o mesmo tamanho que esse planeta anão.",
+        "Na órbitas de marte e Júpiter, localizam-se grande parte dos asteroides que variam de tamanho, podendo ser até mesmo minúsculos.",
+        "A duas sondas espaciais Voyager da Nasa encontraram bolhas magnéticas na região do sistema solar conhecida como Heliosheath, que fica cerca de 14,5 bilhões de quilômetros da terra.",
+        "Em 2007, o telescópio espacial GALEX(Galaxy Evolution Explorer) escaneou a Mira A, uma estrela gigante vermelha, como parte de uma operação para escanear todo o céu em luz ultravioleta.",
+        "Kepler(1571-1630) - astrônomo e matemático alemão fez importantes estudos relacionados aos movimentos dos planetas e de suas órbitas ao redor do sol.",
+        "Sobre as Super Novas, somente depois dos cálculos dos modelos estelares a partir de 1939, foi possível compreender que na verdade não eram estrelas novas, e sim estrelas que explodiam quando acabava seu combustível nuclear.",
+        "O planeta Urano foi descoberto em 1781 pelo astrônomo inglê, william Herschell",
+        "Historiadores e paleontólogos acreditavam que foi a queda de um cometa em nosso planeta que ocasionou a extinção dos dinossauros na terra há milhões de anos",
+        "Copérnico(1473-1543) - astrônomo e matemṕatico polonês fez importantes estudos sobre os movimentos da terra(rotação e translação). Com esses estudos, desenvolveu a teoria do heliocentrismo(sol no centro do sistema solar).",
+        "Galileu Galilei(1564-1642) - fez várias descobertas astronômicas como, por exemplo, a existências das manchas solares, a existência de montanhas e cratera na superfície lunar e os anéis de saturno. foi também importante pois aperfeiçoou o telescópio refrator.",
+        "600 anos a.C. - o pesquisar grego Tales de Mileto calcula e consegue proibir a chegada de um eclipse",
+        "Io, uma das quatro grandes luas de Júpiter, é o local com maior atividade vulcânica de todo sistema solar. Os vulcões de Io são muito mais quentes do que o planeta Terra. Podendo chegar até 1600°C",
+        "Em julho de 2004, a sonda Cassini começou a orbitar saturno. Por causa das missõpes anteriores do Voyager, uma das prioridades da missão de Cassini era investigar a sexta maior lua do planeta chama de Enceladus",
+        "A maior galáxia descoberta pelos astrônomos até o momento é chamada de IC 1101. Ela possui um diâmetro aproximado de 5,5 milhões de anos luz.",
+        "750 a.C. - os egípcios começam a utilizar o movimento do sol para contar o tempo. surgem os primeiros relógios de sol.",        
 
 
     ];
