--- a/JavaScript/sorteiopergunta.html
+++ b/JavaScript/sorteiopergunta.html
@@ -48,37 +48,56 @@
             resposta: "c) Vênus"
         },
         {
-            pergunta: "Qual é o planeta mais quente?<br>a) Terra<br>b) Mercúrio<br>c) Vênus",
-            resposta: "b) Mercúrio"
+            pergunta: "Qual o nome dado ao escudo natural produzido pela estrela Sol, que protege os planetas do sistema de ventos solares, também conhecida como a fronteira do Sistema Solar com o universo<br>a) Heliopausa<br> b) Hidrosfera<br>c) Heliosfera",
+            resposta: "a) Heliopausa"
         },
         {
-            pergunta: "Qual é o planeta mais frio?<br>a) Terra<br>b) Mercúrio<br>c) Vênus",
-            resposta: "c) Vênus"
+            pergunta: "Qual o cometa ao qual se acredita que apareceu no dia do nascimento de Jesus Cristo, o qual supostamente guiou os magos ao local do nascimento?<br>a) Halley<br>b) Ceres<br>c) Io",
+            resposta: "a) Halley"
         },
         {
-            pergunta: "Qual é o planeta mais denso?<br>a) Terra<br>b) Mercúrio<br>c) Vênus",
-            resposta: "b) Mercúrio"
+            pergunta: "Qual o primeiro astronauta norte-americano a entrar em órbita na Terra<br>a) Gordon Cooper<br>b) John Glenn<br>c) Annie Glenn",
+            resposta: "b) John Glenn"
         },
         {
-            pergunta: "Qual é o planeta mais leve?<br>a) Terra<br>b) Mercúrio<br>c) Vênus",
-            resposta: "c) Vênus"
+            pergunta: "Camada proteroa da terra ao qual nos protege de raios UV, ejetados pela estrela Sol<br>a) Camada de Gás<br>b) Camada de Ozônio<br>c) Camada de Hidrogênio",
+            resposta: "b) Camada de Ozônio"
         },
         {
-            pergunta: "Qual é o planeta mais seco?<br>a) Terra<br>b) Mercúrio<br>c) Vênus",
-            resposta: "b) Mercúrio"
+            pergunta: "Que nome recebe as três leis fundamentais da mecânica celeste?<br>a) as leis de Newton<br>b) As leis de Galileu<br>c) As leis de Kepler",
+            resposta: "c) As leis de Kepler"
         },
         {
-            pergunta: "Qual é o planeta mais úmido?<br>a) Terra<br>b) Mercúrio<br>c) Vênus",
-            resposta: "c) Vênus"
+            pergunta: "Quantos Satélites Naturais possui Netuno?<br>a) 6<br>b) 14<br>c) 10",
+            resposta: "b) 14"
+        },
+
+        {
+            pergunta: "Qual o nome dado às Estrelas de Nêutrons, as quais possuem um forte campo magnético?<br>a) Pulsares<br>b) Nêutrons<br>c) Magnéticas",
+            resposta: "a) Pulsares"
         },
         {
-            pergunta: "Qual é o planeta mais jovem?<br>a) Terra<br>b) Mercúrio<br>c) Vênus",
-            resposta: "b) Mercúrio"
+            pergunta: "Nome do movimento em que a Terra gira em torno do seu próprio eixo?<br>a) Translaçãobr>b) Equinócio<br>c) Rotação",
+            resposta: "c) Rotação"
         },
         {
-            pergunta: "Qual é o planeta mais velho?<br>a) Terra<br>b) Mercúrio<br>c) Vênus",
-            resposta: "c) Vênus"
+            pergunta: "Qual é o planeta mais distante do Sol?<br>a) Netuno<br>b) Júpiter<br>c) MArte",
+            resposta: "a) Netuno"
         },
+        {
+            pergunta: "Entre quais planetas se encontra o cinturão de asteiróides?<br>a) Urano e Netuno<br>b) Júpiter e Marte<br>c) Saturno e Mercúrio",
+            resposta: "b) Júpiter e Marte"
+        },
+        {
+            pergunta: "Qual o nome dado ao fenômeno em que a Terra se encontra entre o Sol e a Lua?<br>a) Eclipse<br>b) Lua Cheia<br>c) Lua Nova",
+            resposta: "a) Eclipse"
+
+        },
+        {
+            pergunta: "Parabéns, não tem pergunta para você!",
+            resposta: ""
+        }
+           
     ]
 
     // criar uma função que sorteia uma pergunta aleatória
