--- a/JavaScript/sorteiopergunta.html
+++ b/JavaScript/sorteiopergunta.html
@@ -89,15 +89,38 @@
             resposta: "b) Júpiter e Marte"
         },
         {
-            pergunta: "Qual o nome dado ao fenômeno em que a Terra se encontra entre o Sol e a Lua?<br>a) Eclipse<br>b) Lua Cheia<br>c) Lua Nova",
+            pergunta: "<br>a) Eclipse<br>b) Lua Cheia<br>c) Lua Nova",
             resposta: "a) Eclipse"
 
         },
         {
             pergunta: "Parabéns, não tem pergunta para você!",
             resposta: ""
-        }
-           
+        },
+        {
+            pergunta: "Qual é a teoria mais aceita sobre a origem do universo<br>a) Criacionismo<br>b) Big Bang<br>c) Teoria da Relatividade",
+            resposta: "b) Big Bang"
+        },
+        {
+            pergunta: "Qual é o Planeta mais próximo do Sol?<br>a) Terra<br>b) Marte<br>c) Mercúrio",
+            resposta: "c) Mercúrio"
+        },
+        {
+            pergunta: "Qual é o planeta mais distante do Sol?<br>a) Júpiter<br>b) Marte<br>c) Netuno",
+            resposta: "c) Netuno"
+        },
+        {
+            pergunta: "Qual o nome dado à morte de uma estrela<br>a) morte estelar<br>b) Explosão estelar<br>c) Supernova",
+            resposta: "c) Supernova"
+        },
+        {
+            pergunta: "Qual o nome do escudo alimentado pelo núcleo terrestrem e que nos protege de ejeções de maças coronais, ao qual se formos atingidos em alta quantidade, nos levaria a extinção da biodiversidade terrestre?<br>a) Magnetosfera<br>b) Núcleosfera<br>c) Nucleico",
+            resposta: "a) Magnetosfera"
+        },
+        {
+            pergunta: "Quais são os planetas que compõem o Sistema solar<br>a) Mercúrio, Vênus, Terra, Marte, Júpiter, Saturno, Urano e Netuno<br>b) Mercúrio, Vênus, Terra, Marte, Júpiter, Saturno, Urano, Netuno e Plutão<br>c) Mercúrio, Vênus, Terra, Marte, Júpiter, Saturno, Urano, Netuno, Plutão e Ceres",
+            resposta: "a) Mercúrio, Vênus, Terra, Marte, Júpiter, Saturno, Urano e Netuno"
+        },
     ]
 
     // criar uma função que sorteia uma pergunta aleatória
