--- a/JavaScript/sorteiopergunta.html
+++ b/JavaScript/sorteiopergunta.html
@@ -77,7 +77,7 @@
             resposta: "a) Pulsares"
         },
         {
-            pergunta: "Nome do movimento em que a Terra gira em torno do seu próprio eixo?<br>a) Translaçãobr>b) Equinócio<br>c) Rotação",
+            pergunta: "Nome do movimento em que a Terra gira em torno do seu próprio eixo?<br>a) Translação<br>b) Equinócio<br>c) Rotação",
             resposta: "c) Rotação"
         },
         {
