--- a/index.html
+++ b/index.html
@@ -42,8 +42,13 @@
             <h4 id="pergunta">Perguntas</h4>
         </div> 
 
+        <div id="duvida">
+            <img id="duvida" src="img/duvida.png" alt="" onclick="sorteioDuvida()">
+            <h4 id="duvida">Dúvidas</h4>
+        </div>
+
         <div id="imagem">
-            <img id="imgjogo" src="img/tabuleiroof.png" alt="">
+            <img id="imgjogo" src="img/background.jpg" alt="">
         </div>
     </div>
 </body>
