--- a/JavaScript/sorteiopergunta.html
+++ b/JavaScript/sorteiopergunta.html
@@ -9,31 +9,146 @@
 <body>
     <!-- criar uma pergunta com três alternativas, e um botão "ver resposta" -->
     <div class="container">
-        <h3 id="pergunta"></h3>
-        <button id="ver-resposta">Ver resposta</button>
-        <h3 id="resposta"></h3>
+        <div class="content first-content">
+            <div class="first-column">
+                <h2 class="title title-primary">DESBRAVANDO O UNIVERSO</h2>
+                <p class="description description-primary">Aqui você pode testar seus conhecimentos sobre o universo!</p>
+        </div>
+        <div class="second-column">
+            <h2 class="title title-second">Questão Sorteada</h2>
+            <p class="description description-second" id="pergunta"></p>
+            <button id="ver-resposta" class="btn btn-primary">Ver resposta</button>
+            <p>RESPOSTA:</p>
+            <p id="resposta"></p>
     </div>
 </body>
 <style>
-    *{margin: 0 ; padding: 0}
 
-    p{padding: 10px;}
-    .row{ margin: 0 auto;}
-
-    body{background-color: #0b236d;; background-size: cover; background-repeat: no-repeat;color: #ffffff; font-family: Arial, Helvetica, sans-serif; font-size: 16px; line-height: 1.5; text-align: center;}
-
-    .container { 
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-
-        border: 1px solid #fff;
-        border-radius: 10px;
-        padding: 10px;
-        text-align: justify;
-        
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap');
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
     }
+    body {
+        background: #f5f5f5;
+        font-family: 'Open Sans', sans-serif;
+    }
+    p{
+        /* espaçar entre as bordas */
+        padding: 0 20px;
+
+    }
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: #ecf0f1;
+    }
+    .content {
+        background-color: #fff;
+        border-radius: 15px;
+        width: 960px;
+        height: 50%;
+        justify-content: space-between;
+        align-items: center;
+        position: relative;
+    }
+    .content::before {
+        content: "";
+        position: absolute;
+        background-color: #010D48;
+        width: 40%;
+        height: 100%;
+        border-top-left-radius: 15px;
+        border-bottom-left-radius: 15px;
+
+
+        left: 0;
+    }
+    .title {
+    font-size: 28px;
+    font-weight: bold;
+    text-transform: capitalize;
+    }
+    .title-primary {
+        color: #fff;
+    }
+    .title-second {
+        color: #010D48;
+    }
+    .description {
+        font-size: 14px;
+        font-weight: 300;
+        line-height: 30px;
+    }
+    .description-primary {
+        color: #fff;
+    }
+    .description-second {
+        color: #7f8c8d;
+    }
+    .btn {
+        border-radius: 15px;
+        border-color: #010D48;
+        text-transform: uppercase;
+        color: #010D48;
+        font-size: 10px;
+        padding: 10px 50px;
+        cursor: pointer;
+        font-weight: bold;
+        width: 150px;
+        align-self: center;
+        border: none;
+        margin-top: 1rem;
+    }
+    .btn-primary {
+        background-color: transparent;
+        border: 1px solid #fff;
+        transition: background-color .5s;
+    }
+    .btn-primary:hover {
+        background-color: #fff;
+        color: #010D48;
+    }
+    .btn-second {
+        background-color: #010D48;
+        border: 1px solid #010D48;
+        transition: background-color .5s;
+    }
+    .btn-second:hover {
+        background-color: #fff;
+        border: 1px solid #010D48;
+        color: #010D48;
+    }
+    .first-content {
+        display: flex;
+    }
+    .first-content .second-column {
+        z-index: 11;
+    }
+    .first-column {
+        text-align: center;
+        width: 40%;
+        z-index: 10;
+    }
+    .second-column {
+        width: 60%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .second-column .btn {
+        margin-top: 2rem;
+    }
+    .second-column .btn:hover {
+        background-color: #010D48;
+        border: 1px solid #010D48;
+        color: #fff;
+    }
+
+
 
 </style>
 <script>
