--- a/JavaScript/sorteiopergunta.html
+++ b/JavaScript/sorteiopergunta.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>perguntasss</title>
+    <title>perguntass</title>
 </head>
 <body>
-    <!-- criar uma pergunta com três alternativas, e um botão "ver resposta" -->
     <div class="container">
         <div class="content first-content">
             <div class="first-column">
@@ -100,7 +99,6 @@
         font-weight: bold;
         width: 150px;
         align-self: center;
-        border: none;
         margin-top: 1rem;
     }
     .btn-primary {
