--- a/JavaScript/sorteiosorte.html
+++ b/JavaScript/sorteiosorte.html
@@ -43,6 +43,7 @@
         font-weight: bold;
         padding-top: 80px;
         color: #7f8c8d;
+        font-size: 15px;
     }
     #title{
         font-size: 20px;
