--- a/JavaScript/sorteiosorte.html
+++ b/JavaScript/sorteiosorte.html
@@ -203,11 +203,32 @@
         "Em julho de 2004, a sonda Cassini começou a orbitar saturno. Por causa das missõpes anteriores do Voyager, uma das prioridades da missão de Cassini era investigar a sexta maior lua do planeta chama de Enceladus",
         "A maior galáxia descoberta pelos astrônomos até o momento é chamada de IC 1101. Ela possui um diâmetro aproximado de 5,5 milhões de anos luz.",
         "750 a.C. - os egípcios começam a utilizar o movimento do sol para contar o tempo. surgem os primeiros relógios de sol.",        
-
+        "A estrela mais próxima do Sol é a Próxima de Centauro. É uma estrela anã vermelha pertencente ao sistema estelar Alfa de Centauro. A sua massa é de apenas 10% da massa do Sol e está a 4 anos-luz de distância. Se ela desaparecesse agora só daqui a 4 anos o saberíamos.",
+        "Em Netuno, sétimo planeta do Sistema Solar, nunca faríamos um ano de idade, pois este planeta leva precisamente 163 anos terrestres para completar o seu movimento de translação em volta do Sol",
+        "Titã é o único satélite natural no Sistema Solar que tem atmosfera própria. Este é o maior dos 18 satélites naturais de Saturno.",
+        "As constelações mais conhecidas no Brasil são a Cruzeiro do Sul e Órion. A constelação de Órion é, em parte, formada por 3 estrelas alinhadas, denominadas As Três Marias. Para os gregos antigos, elas representavam o Cinturão de Órion.",
+        "Planetas, constelações e galáxias formam apenas 4% do universo. O resto é feito de matéria escura, um tipo estranho de matéria sobre a qual os cientistas não sabem nada.",
+        "Anel de fogo no céu: O Eclipse Anular ocorre quando a Lua está mais distante do nosso planeta do que o usual, e alinhado entre a Terra e o Sol, — de maneira parcial ou total — causando a impressão de que o satélite natural diminuiu de tamanho na perspectiva do observador. Por isso, é possível ver raios solares que escapam pelas bordas, criando o efeito de um anel brilhante iluminando o contorno da Lua, popularmente conhecido como anel de fogo.",
+        "Júpiter é duas vezes maior do que todos os outros planetas, satélites, asteroides e cometas do Sistema Solar juntos.",
+        "O planeta do Sistema Solar com o maior número de luas é Júpiter, com 63. O segundo lugar fica com Saturno, com 34 luas.",
+        "Os lobos uivam para a lua cheia? A imagem de lobos uivando para a lua já faz parte do imaginário popular, mas na verdade, eles não fazem isso para o nosso satélite, apesar desses animais terem motivo para uivarem mais durante a lua cheia.",
+        "A maioria das galáxias surgiu um pouco depois da formação do universo. Os cientistas acreditam que elas tenham, em média, entre 10 e 13,6 bilhões de anos! A galáxia mais nova de que se tem notícia nasceu há cerca de 500 milhões de anos.",
+        "As estrelas são um dos corpos celestes que compõem as galáxias. A luz que vemos ao observá-las vem desses astros! Somente na Via Látea, acredita-se haver entre 200 e 250 bilhões de estrelas.",
+        "As galáxias estão em movimento, e algumas caminham em direção a outras, o que provavelmente levará a uma colisão. Isso deve ocorrer entre a Via Láctea e a Galáxia de Andrômeda daqui a 5 bilhões de anos!",
+        "Há galáxias em forma de espiral, como a Via Láctea, com braços que parecem um cata-vento. Há também as elípticas e as galáxias com formas irregulares!",
+        "Como a luz das estrelas demora para chegar até nós, é provável que muitas estrelas que vemos na Terra não existam mais.",
+        "Se fôssemos conduzir um carro a uma velocidade constante de 160 quilômetros por hora, levaríamos 220 milhões de anos para chegar no centro da Via Láctea",
+        "O elemento mais abundante no Universo é o hidrogênio (93%), seguido do hélio (cerca de 7%). O restante é constituído dos materiais que conhecemos como oxigênio, ferro, fósforo, carbono…",
+        "A maior estrela conhecida do Universo é a VY Canis Majoris, com porte 1.800 a 2.100 vezes maior que o nosso sol. Mas os astrônomos suspeitam que a UY Scuti seja ainda maior, o que precisa ser comprovado através de observações e cálculos.",
+        "Os astrônomos estimam em 275 milhões o número de estrelas que nascem por dia.",
+        "O maior vulcão do Sistema Solar é o Monte Olimpo, uma montanha marciana três vezes maior do que o nosso Monte Everest.",
+        "O céu da Terra é azul; o de Marte é cor de rosa; o de Vênus, amarelo-laranja; o de Urano, verde; e o de Júpiter, preto.",
+        "A Lua é o único satélite natural do Sistema Solar que tem água em estado líquido em sua superfície.",
+        
 
     ];
     
-    var cronometro = 5;
+    var cronometro = 6;
     var cronometroId = setInterval(function(){
         cronometro--;
         document.getElementById('title').innerHTML = "O sorteio será realizado em " + cronometro + " segundos!";
