lotes de perguntas

--- a/JavaScript/sorteiopergunta.html
+++ b/JavaScript/sorteiopergunta.html
@@ -232,6 +232,186 @@
             pergunta: "Quais são os planetas que compõem o Sistema solar<br>a) Mercúrio, Vênus, Terra, Marte, Júpiter, Saturno, Urano e Netuno<br>b) Mercúrio, Vênus, Terra, Marte, Júpiter, Saturno, Urano, Netuno e Plutão<br>c) Mercúrio, Vênus, Terra, Marte, Júpiter, Saturno, Urano, Netuno, Plutão e Ceres",
             resposta: "a) Mercúrio, Vênus, Terra, Marte, Júpiter, Saturno, Urano e Netuno"
         },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
+        {
+            pergunta: "",
+            resposta: ""
+
+        },
     ]
 
     // criar uma função que sorteia uma pergunta aleatória
